--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>CBCEL Community Forums</title>
+  <title>CBCEL Community Forum</title>
 </head>
 
 <body ng-app="ForumApp">
